--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ PGDATABASE=projekopenmusic
 PGPORT=5432
 
 # nodemailer SMTP authentication
-MAIL_ADDRESS=<Email Gmail Anda>
-MAIL_PASSWORD=<Password Gmail Anda>
+MAIL_ADDRESS=<Email Gmail>
+MAIL_PASSWORD=<Password Gmail>
 
 #Message broker
 RABBITMQ_SERVER=amqp://localhost
